samples/_failures_safe/1761418933_29c98a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c5c448bd.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_c5c448bd.c:177:13: error: expected identifier at end of input
  177 |             if (lexer->
      |             ^~
./samples/SAFE/__tmp_c5c448bd.c:177:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c5c448bd.c:177:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c5c448bd.c:177:13: error: expected declaration or statement at end of input
